--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -86,7 +86,7 @@ main {
     display: none;
 }
 #menu{
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     display: flex;
     align-items: center;
