Revise y ajuste bien los permisos y accesos que tiene cada rol a las vistas, modifique en la base de datos de  "sistem_admin" a "TI" que como se tomaba el rol en todo el codigo y hice un pequeño cambio visual del login quitando la linea verdde del medio y centrando tanto el logo como el titulo de "iniciar sesion"

--- a/app/assets/css/login.css
+++ b/app/assets/css/login.css
@@ -29,7 +29,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border-left: solid 1px var(--verde-corporativo) ;
+    /* border-left: solid 1px var(--verde-corporativo) ; */
 }
 .label-login{
     color: var(--azul-oscuro-contraste);
@@ -78,8 +78,8 @@
 }
 #text_login{
     position: absolute;
-    left: 70%;
-    top: 5px;
+    left: 64%;
+    top: 35px;
     font-size: 35px;
     color: var(--verde-corporativo);
 }
@@ -100,7 +100,8 @@
     width: 90%;
     height: 100%;
     position: relative;
-    left: 4%;
+    left: 7%;
+    bottom: 20%;
 }
 @media screen and (max-width: 600px) {
     /* Ajustes para pantallas pequeñas */
